Adds search filters